# Beyond_2025_bigcontest

./: .gitignore  README.md  column_descriptions.py  data_loader.py  gemini_client.py  mcp_server.py  processed_big_data_f.csv  pylock.toml  pyproject.toml  requirements.txt  strategy_rules.py  streamlit_app.py  utils.py  visualization.py
data/: new_final_set_f_yearly1022.csv  prepro_public2.csv  ~$rank_quant_set_f.csv
preprocess_main_data/: first_1_preprocess_all.py  first_2_missing_value.py  forth_derived_value.py  second_merge.py  third_quant.py
process_py/: data_outlier_mapping.csv  readme.md  step1_conversion.py  step2_missingvalue.py  step3_drop_and_merge.py  step4_scaling.py  step5_outlier.py  step6_outlier_mapping.py  step7_industry_reclassification.py  step8_join_by_year.py
